force-app/main/default/objects/MedicalInsight/MedicalInsight.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>