force-app/main/default/objects/MedicalInsight/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>Description of downstream actions taken based on this insight</description>
    <inlineHelpText>Document what was done with this insight (e.g., &quot;Updated FAQ document&quot;, &quot;Shared with clinical team&quot;, &quot;Incorporated into next trial protocol&quot;).</inlineHelpText>
    <label>Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>