force-app/main/default/objects/MedicalInsight/fields/AI_Action_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Action_Score__c</fullName>
    <label>AI Action Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>