force-app/main/default/objects/MedicalInsight/fields/AI_Cluster_Key__c.field-meta.xml
<CustomField>
    <fullName>AI_Cluster_Key__c</fullName>
    <label>AI Cluster Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>