force-app/main/default/objects/MedicalInsight/fields/AI_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Version__c</fullName>
    <label>AI Model Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>