force-app/main/default/objects/MedicalInsight/fields/AI_Redacted__c.field-meta.xml
<CustomField>
    <fullName>AI_Redacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Redacted</label>
    <type>Checkbox</type>
</CustomField>