force-app/main/default/objects/MedicalInsight/fields/AI_Subject_Tags__c.field-meta.xml
<CustomField>
    <fullName>AI_Subject_Tags__c</fullName>
    <label>AI Subject Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>