force-app/main/default/objects/MedicalInsight/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <description>Status of follow-up actions on this insight</description>
    <inlineHelpText>Pending: Needs review. In Progress: Action being taken. Completed: Follow-up complete. No Action: No follow-up needed.</inlineHelpText>
    <label>Follow-Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>