force-app/main/default/objects/MedicalInsight/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Assessed impact level of this insight on business/medical strategy</description>
    <inlineHelpText>High: Major strategic impact (e.g., trial design change). Medium: Tactical impact (e.g., content update). Low: Informational. None: No action taken.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>