force-app/main/default/objects/MedicalInsight/fields/Insight_Category__c.field-meta.xml
<CustomField>
    <fullName>Insight_Category__c</fullName>
    <description>Classification of medical insight for routing and outcome measurement</description>
    <inlineHelpText>Categorize the insight to enable proper routing and downstream action tracking.</inlineHelpText>
    <label>Insight Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clinical Trial Design</fullName>
            </value>
            <value>
                <fullName>Content Gap</fullName>
            </value>
            <value>
                <fullName>Endpoint Preference</fullName>
            </value>
            <value>
                <fullName>Guideline Feedback</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payer Objection</fullName>
            </value>
            <value>
                <fullName>Product Feedback</fullName>
            </value>
            <value>
                <fullName>Safety Signal</fullName>
            </value>
            <value>
                <fullName>Treatment Patterns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>