force-app/main/default/objects/MedicalInsight/fields/Temp_Debug_Model_Json__c.field-meta.xml
<CustomField>
    <fullName>Temp_Debug_Model_Json__c</fullName>
    <label>Temp Debug Model Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>