force-app/main/default/objects/MedicalInsight/listViews/All_MedicalInsights.listView-meta.xml
<ListView>
    <fullName>All_MedicalInsights</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>AI_Action_Score__c</columns>
    <columns>AI_Cluster_Key__c</columns>
    <columns>AI_Subject_Tags__c</columns>
    <columns>AI_Product_Tags__c</columns>
    <columns>AI_Account_Tags__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Medical Insights</label>
</ListView>